force-app/main/default/objects/EventInvite__c/EventInvite__c.object-meta.xml
<CustomObject>
    <label>Event Invite</label>
    <nameField>
        <displayFormat>EI-{000000}</displayFormat>
        <label>Event Invite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>