force-app/main/default/objects/EventInvite__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <inlineHelpText>Number of invitees who have accepted invitation.</inlineHelpText>
    <label>Accepted</label>
    <summaryFilterItems>
        <field>EventInviteResponse__c.Response__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>EventInviteResponse__c.event_invite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>