force-app/main/default/objects/EventInvite__c/fields/Declined__c.field-meta.xml
<CustomField>
    <fullName>Declined__c</fullName>
    <inlineHelpText>Number of invitees who have declined invitation.</inlineHelpText>
    <label>Declined</label>
    <summaryFilterItems>
        <field>EventInviteResponse__c.Response__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>EventInviteResponse__c.event_invite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>