force-app/main/default/objects/EventInvite__c/fields/Undecided__c.field-meta.xml
<CustomField>
    <fullName>Undecided__c</fullName>
    <inlineHelpText>Number of invitees who have responded &quot;Maybe&quot; to invite.</inlineHelpText>
    <label>Undecided</label>
    <summaryFilterItems>
        <field>EventInviteResponse__c.Response__c</field>
        <operation>equals</operation>
        <value>Undecided</value>
    </summaryFilterItems>
    <summaryForeignKey>EventInviteResponse__c.event_invite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>