force-app/main/default/objects/EventInvite__c/fields/Unresponded__c.field-meta.xml
<CustomField>
    <fullName>Unresponded__c</fullName>
    <inlineHelpText>Number of invitees who have not yet responded to invite.</inlineHelpText>
    <label>Unresponded</label>
    <summaryFilterItems>
        <field>EventInviteResponse__c.Response__c</field>
        <operation>equals</operation>
        <value>Not Responded</value>
    </summaryFilterItems>
    <summaryForeignKey>EventInviteResponse__c.event_invite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>